Fix showing long needle name in hover popup
Wrapping looks much better than spilling the text over the
popup border

See https://progress.opensuse.org/issues/14732

--- a/assets/stylesheets/overview.scss
+++ b/assets/stylesheets/overview.scss
@@ -1,11 +1,11 @@
 .overview {
     .tooltip ul {
         text-align: left;
-        white-space: nowrap;
+        word-break: break-word;
     }
     
     .tooltip-inner {
-        /* we need smoe more space for all the needles */
+        /* we need some more space for all the needles */
         max-width: 400px;
     }
 }
